ont-api: Ontology-RDF-Model - minor improving performance, changes with ExtendedIterator and Streams (issue https://github.com/avicomp/ont-api/issues/30)